<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.bitcoindashboard.InfoFragments.AddWalletFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="@string/add_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_wallet_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textSize="30sp" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wallet_save"
        android:layout_alignBottom="@+id/add_wallet_address"
        android:layout_toEndOf="@+id/add_wallet_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="38dp"
        android:id="@+id/add_wallet_address"
        android:textSize="18sp"
        android:hint="@string/wallet_hint"
        android:layout_below="@+id/add_wallet_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />
</RelativeLayout>
