<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="edu.temple.bitcoindashboard.InfoFragments.BlockInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginStart="19dp"
        android:layout_alignBaseline="@+id/fee"
        android:layout_alignBottom="@+id/fee"
        android:layout_toEndOf="@+id/fee"
        android:id="@+id/retrieved_fee"/>

    <TextView
        android:text="@string/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fee"
        android:layout_alignStart="@+id/fee"
        android:layout_marginTop="41dp"
        android:id="@+id/size"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retrieved_size"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/size"
        android:layout_alignBottom="@+id/size"
        android:layout_alignStart="@+id/retrieved_fee" />

    <TextView
        android:text="@string/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/difficulty"
        android:textSize="24sp"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/size"
        android:layout_alignEnd="@+id/size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retrieved_difficulty"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/difficulty"
        android:layout_alignBottom="@+id/difficulty"
        android:layout_alignStart="@+id/retrieved_size" />

    <TextView
        android:text="@string/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/fee"
        android:textSize="24sp"
        android:layout_below="@+id/current_block_number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="103dp" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_block_number"
        android:layout_alignStart="@+id/retrieved_fee"
        android:id="@+id/block_info_progress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_block_number"
        android:layout_marginTop="46dp"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/previous_block_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous_block"
        android:layout_alignBaseline="@+id/next_block"
        android:layout_alignBottom="@+id/next_block"
        android:layout_toStartOf="@+id/size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:id="@+id/next_block"
        android:text="@string/next_block_text"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/current_block_number"
        android:layout_marginStart="13dp" />
</RelativeLayout>
